--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,7 @@
 *.Rproj filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
 *.R filter=lfs diff=lfs merge=lfs -text
+*.Rd filter=lfs diff=lfs merge=lfs -text
+*.rds filter=lfs diff=lfs merge=lfs -text
+*.Rmd filter=lfs diff=lfs merge=lfs -text
+*.RData filter=lfs diff=lfs merge=lfs -text
