--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: datasetTRES
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Provide example data for package "TRES"
 Version: 0.1.0
 Author: Zhenxing Guo
 Maintainer: The package maintainer <zguo59@emory.edu>
-Description: Prepare datasets for Package "TRES"
-License: What license is it under?
+Description: This package contains a collection of example datasets that can be used by Package "TRES"
+License: CC0
 Encoding: UTF-8
 LazyData: true
